# personalized-computer-settings

./: .gitignore  pyproject.toml
config/: default.yaml  system.yaml  windows_shortcuts.yaml
config/dev_dist/: map.yaml
config/shell/: config.yaml  config_darwin.yaml  config_ext.yaml  config_win32.yaml  map.yaml  map_darwin.yaml  map_ext.yaml  map_win32.yaml
config/shortcut/: map.yaml  map_linux.yaml  map_win32.yaml  shortcut.yaml  shortcut_linux.yaml  shortcut_win32.yaml
config/shortcut_map/: linux_shortcuts.yaml  windows_shortcuts.yaml
config/shortcut_map/user/: windows_shortcuts.yaml
config/user/: windows_shortcuts.yaml
docs/: devnote.md
docs/devnote/: config-folder-structure.md
mypc_settings/: __init__.py  __main__.py  common.py  config.py  custom_static_ip.py  dev_dist.py  init_home_directories.py  keymapper.py  make_nushell_profile.py  make_powershell_profile.py  make_shortcut.py  make_windows_user_environment_variables.py  sort_windows_environment_paths.py  windows_environment_settings.py  windows_layout_manager.py
mypc_task_manager/: app.py  config.yaml
