[tool.poetry]
name = "mypc-settings"
version = "0.1.0"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "mypc_settings" }]

[tool.poetry.dependencies]
python = "^3.12"
argsense = { version = "^1.0.1", source = "likianta" }
ipython = "^9.4.0"
lk-logger = { version = "^6.0.7a1", source = "likianta" }
lk-utils = { version = "^3.3.0a17", source = "likianta" }
netifaces = "^0.11.0"
# netifaces2 = "^0.0.22"
psutil = "^6.1.1"
pywin32 = { version = "^308", platform = "win32" }
streamlit = ">=1.45.0,<1.46.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
