[tool.poetry]
name = "mypc-settings"
version = "0.1.0"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "mypc_settings" }]

[tool.poetry.dependencies]
python = "^3.12"
argsense = { version = "^1.1.1a0", source = "likianta" }
# ipython = "^9.10.0"
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.5.0a11", source = "likianta" }
netifaces = "^0.11.0"
# netifaces2 = "^0.0.22"
psutil = "^7.2.2"
pywin32 = { version = "^311", platform = "win32" }
streamlit = "^1.54.0"
streamlit-canary = { version = "^0.1.1a18", source = "likianta" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
